--- a/dbt/predict_may/models/staging/sources.yml
+++ b/dbt/predict_may/models/staging/sources.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: football
     database: football
-    schema: raw
+    schema: main
     description: "Raw football data ingested from API-Football"
 
     tables:
