--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,42 @@
 # Python
+venv/
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
 
-# Virtual env
-venv/
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# Environment
 .env
 
-# Data
+# DuckDB
 data/*.duckdb
-data/raw/
+data/*.duckdb.wal
+
+# dbt
+dbt/predict_may/target/
+dbt/predict_may/dbt_packages/
+dbt/predict_may/logs/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
 # OS
 .DS_Store
+Thumbs.db
+
+# Data files (optional - you may want to commit some)
+# data/*.csv
+# data/*.parquet
