--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "git.ignoreLimitWarning": true
+    "python.defaultInterpreterPath": "${workspaceFolder}/venv/bin/python",
+    "jupyter.notebookFileRoot": "${workspaceFolder}",
+    "files.exclude": {
+        "**/__pycache__": true,
+        "**/*.pyc": true,
+        "**/venv": true
+    },
+    "python.analysis.extraPaths": [
+        "${workspaceFolder}/dbt/predict_may"
+    ],
+    "[sql]": {
+        "editor.defaultFormatter": "dorzey.vscode-sqlfluff"
+    }
 }
